2011-06-20	Ralf Corsépius <ralf.corsepius@rtems.org>

	* psxclassic01/psxclassic01.doc: Fix copyright date.

2011-05-16	Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* psxclock/init.c (Init):
	Use CLOCK_PROCESS_CPUTIME_ID and CLOCK_THREAD_CPUTIME_ID.
	* psxclock/psxclock.scn: Regenerate.

2011-05-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psxfile01/test.c, psxmsgq01/init.c, psxreaddir/test.c: Fix tests
	broken in warning pass.

2011-05-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psx04/task3.c, psxfile01/test.c, psxhdrs/Makefile.am,
	psxmsgq01/init.c, psxreaddir/test.c, psxsignal01/init.c,
	psxtimes01/init.c, psxualarm/init.c: Remove warnings.

2011-04-15	Sebastian Huber <Sebastian.Huber@embedded-brains.de>

	* psxstat/test.c: Fixed integer type.  Check status codes.

2011-03-09	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psx04/init.c, psx04/psx04.scn: Remove test case made obsolete by
	PR1759.

2011-03-08	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1759/cpukit
	* Makefile.am, configure.ac: Add test to use some pthread calls with
	Classic Tasks.
	* psxclassic01/.cvsignore, psxclassic01/Makefile.am,
	psxclassic01/init.c, psxclassic01/psxclassic01.doc,
	psxclassic01/psxclassic01.scn: New files.

2011-02-22	Ralf CorsÃ©pius <ralf.corsepius@rtems.org>

	* configure.ac: Add AC_CONFIG_HEADER(config.h).

2011-02-22	Ralf CorsÃ©pius <ralf.corsepius@rtems.org>

	* psx01/init.c, psx01/task.c, psx02/init.c, psx02/task.c, psx03/init.c,
	psx03/task.c, psx04/init.c, psx04/task1.c, psx04/task2.c, psx04/task3.c,
	psx05/init.c, psx05/task.c, psx05/task2.c, psx05/task3.c, psx06/init.c,
	psx06/task.c, psx06/task2.c, psx07/init.c, psx07/task.c, psx08/init.c,
	psx08/task1.c, psx08/task2.c, psx08/task3.c, psx09/init.c, psx10/init.c,
	psx10/task.c, psx10/task2.c, psx10/task3.c, psx11/init.c, psx11/task.c,
	psx12/init.c, psx12/task.c, psx13/main.c, psx13/test.c, psx14/init.c,
	psx15/init.c, psxaio01/init.c, psxaio02/init.c, psxaio03/init.c,